fix: hamburger menu align on header

--- a/styles/header.scss
+++ b/styles/header.scss
@@ -4,7 +4,7 @@
     align-items: center;
     position: relative;
     .hamburger-menu {
-        display: inline-block;
+        align-items: center;
         margin-right: 5%;
     }
     .logo {
